# apollo-federation-subgraph-compatibility

implementations/async-graphql/: Cargo.toml
implementations/async-graphql/src/schema/: product.rs
